--- a/index.html
+++ b/index.html
@@ -12,23 +12,24 @@
     <form id="priceCalcForm" onsubmit="return false;">
       <div class="input-group">
         <label for="itemName">Item Name:</label>
-        <input type="text" id="itemName" placeholder="e.g. Milk, Apples" required />
+        <input type="text" id="itemName" placeholder="e.g. Milk, Apples"/>
       </div>
       <div class="input-group">
-        <label for="pricePerUnit">Price per unit:</label>
+        <label for="pricePerUnit">Item Price(Kg/Ltr/Dozen):</label>
         <input type="number" id="pricePerUnit" placeholder="20.00" min="0" step="0.01" required />
       </div>
       <div class="input-group">
         <label for="unit">Unit:</label>
         <select id="unit" required>
           <option value="kg">Kilogram (kg)</option>
+          <option value="g">Gram (gms)</option>
           <option value="ltr">Litre (ltr)</option>
-          <option value="pcs">Pieces (pcs)</option>
+          <option value="doz">Dozen (doz)</option>
         </select>
       </div>
       <div class="input-group">
         <label for="weight">Weight / Quantity:</label>
-        <input type="number" id="weight" placeholder="2.5" min="0" step="0.01" required />
+        <input type="number" id="weight" placeholder="2.5" min="0" step="0.001" required />
       </div>
       <button id="calculateBtn" type="submit">Calculate Total Price</button>
     </form>
