--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <form id="priceCalcForm" onsubmit="return false;">
       <div class="input-group">
         <label for="itemName">
-          Item Name<br>
+          Item Name
           <span style="font-size:0.95em;color:#888;">वस्तु का नाम</span>
         </label>
         <input type="text" id="itemName" placeholder="e.g. Milk, Apples"/>
@@ -26,7 +26,7 @@
       </div>
       <div class="input-group">
         <label for="unit">
-          Unit<br>
+          Unit
           <span style="font-size:0.95em;color:#888;">मापन</span>
         </label>
         <select id="unit" required>
@@ -38,12 +38,12 @@
       </div>
       <div class="input-group">
         <label for="weight">
-          Weight / Quantity<br>
+          Weight / Quantity
           <span style="font-size:0.95em;color:#888;">वजन / मात्रा</span>
         </label>
         <input type="number" id="weight" placeholder="2.5" min="0" step="0.001" />
       </div>
-      <button id="addItemBtn" type="button">ADD ITEM<br><span style="font-size:0.95em;color:#fff;">वस्तु जोड़ें</span></button>
+      <button id="addItemBtn" type="button">ADD ITEM<span style="font-size:0.95em;color:#fff;">   वस्तु जोड़ें</span></button>
       <ul id="itemList"></ul>
     </br>
       <button id="calculateBtn" type="submit">CALCULATE TOTAL PRICE<br><span style="font-size:0.95em;color:#fff;">कुल मूल्य निकालें</span></button>
