--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+   <meta name="keywords" content="grocery bill calculator, item cost calculator, bill calculator, grocery calculator, vegetable cost calculator, item price calculator, shopping bill calculator, cost calculator for vegetables, item calculator, total bill calculator, food cost calculator, market bill calculator, price calculator, grocery price calculator, itemized bill calculator, daily item calculator, fruits cost calculator, kitchen bill calculator, expense calculator, household bill calculator, supermarket calculator, grocery expense calculator, itemized cost calculator, item bill calculator, vegetable price calculator, grocery shopping calculator" />
+  
   <title>My Bill Calculator</title>
   <link rel="stylesheet" href="styles.css" />
 </head>
