--- a/index.html
+++ b/index.html
@@ -73,6 +73,13 @@
     <a id="downloadPdfBtn" href="#" style="display:none; background:none; border:none; color:#0066b2; text-decoration:underline; cursor:pointer; font-size:1.1rem; font-weight:600; margin-top:10px;">
       DOWNLOAD PDF<br><span style="font-size:0.95em;color:#0066b2;">(पीडीएफ डाउनलोड करें)</span>
     </a>
+    <!-- Move the footer here, just below the calculate total price/result/download -->
+    <footer style="margin-top:32px; padding:16px 0; color:#444; font-size:1.05em; text-align:center; background:#f7f7f7;">
+      <strong>About This Calculator</strong><br>
+      This calculator is designed for your daily routine purchases, especially when item weights are not round numbers like 1, 2, or 3 kg, but instead are values such as 1 kg 432 grams, 2.75 liters, or 7 pieces. It helps you quickly and accurately calculate the price of groceries, vegetables, fruits, and other household items where weights and quantities are often irregular. <br><br>
+      Simply enter the item name, price per unit (kg, liter, dozen, or piece), and the exact weight or quantity you purchased. The calculator will instantly compute the total price for each item and your overall bill. You can also download a detailed PDF bill for your records or sharing.<br><br>
+      <em>This tool is especially useful for market, grocery, and kitchen shopping where precise calculations save time and money.</em>
+    </footer>
   </div>
   <script src="script.js"></script>
 </body>
