--- a/index.html
+++ b/index.html
@@ -7,20 +7,20 @@
   <meta name="description" content="My Bill Calculator helps you quickly and accurately calculate the total price of groceries, vegetables, fruits, and other daily items with irregular weights or quantities. Download your detailed bill as a PDF. Perfect for market, grocery, and kitchen shopping." />
   <meta name="author" content="Your Name or Brand" />
   <title>My Bill Calculator | Grocery, Vegetable, and Daily Item Price Calculator</title>
-  <link rel="canonical" href="https://www.mybillcalculator.com/pricecalculator/" />
+  <link rel="canonical" href="https://www.mybillcalculator.com/index.html/" />
   <link rel="stylesheet" href="styles.css" />
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
   <!-- Open Graph / Facebook -->
   <meta property="og:title" content="My Bill Calculator | Grocery, Vegetable, and Daily Item Price Calculator" />
   <meta property="og:description" content="Easily calculate your grocery, vegetable, and daily item bills with irregular weights or quantities. Download your bill as PDF. Free, fast, and accurate." />
   <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://www.mybillcalculator.com/pricecalculator/" />
-  <meta property="og:image" content="https://www.mybillcalculator.com/pricecalculator/billcalculator.jpg" />
+  <meta property="og:url" content="https://www.mybillcalculator.com/index.html" />
+  <meta property="og:image" content="https://www.mybillcalculator.com/billcalculator.jpg" />
   <!-- Twitter -->
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="My Bill Calculator | Grocery, Vegetable, and Daily Item Price Calculator" />
   <meta name="twitter:description" content="Easily calculate your grocery, vegetable, and daily item bills with irregular weights or quantities. Download your bill as PDF. Free, fast, and accurate." />
-  <meta name="twitter:image" content="https://www.mybillcalculator.com/pricecalculator/billcalculator.jpg" />
+  <meta name="twitter:image" content="https://www.mybillcalculator.com/billcalculator.jpg" />
 </head>
 <body>
   <div class="container">
